--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,10 @@ ul.disc li{
     border-radius: 5px;
     color: #bbb;
 }
+/* li{} */
+p,li {
+    color:black !important;
+}
 .dropdown-menu:after,
 .dropdown-menu:before {
     border-left: 12px solid transparent;
