--- a/css/style.css
+++ b/css/style.css
@@ -79,10 +79,10 @@ ul.disc li{
     /*background: #fff;*/
 }
 .wrapper header.header .navbar-nav a{
-	padding: 18px 30px 0px;
+	padding: 10px 22px 0px;
 	text-transform: capitalize;
 }
-.wrapper header.header .navbar-nav li:last-child a{padding-right: 15px;}
+.wrapper header.header .navbar-nav li:last-child a{padding-right: 0px;}
 .navbar-default .navbar-collapse{position: relative;}
 .wrapper header.header .callus{
     position: absolute;
@@ -127,7 +127,7 @@ ul.disc li{
 .wrapper header.header .navbar-nav .dropdown-menu li:last-child a{padding-bottom: 10px;}
 .wrapper header.header .navbar-nav{
     float: right;
-    padding-top: 15px;
+    /* padding-top: 15px; */
 }
 .wrapper header .navbar-toggler{border-color: transparent;}
 /*menu*/
