--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,20 @@ body{
     font-family: 'Rubik', sans-serif!important;
     font-size: 14px;
 }
-
+/* id="myNav" */
+#myNav{
+    margin-top:-15px;
+}
+.wrapper header.header .navbar-nav .dropdown-menu li a {
+    padding: 4px 15px !important;
+}
 /* Form Styles */
 .my-form {
     margin-top: 50px;
+}
+.navbar-default .navbar-collapse, .navbar-default .navbar-form{
+    margin-top: 50px;
+
 }
 
 .input-group {
