--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ p,li {
 }
 .my-form .form-control{
 	height: 45px;
-	color: #b1afaf;
+	color: black;
 	background: #f9f9f9;
 	font-size: 13px;
 }
